--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.3.0-alpha3",
     "rxjs": "~7.8.0",
+    "transition-style": "^0.1.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
